If duration not input, calculate it from expiring date
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
 
             <div class="form-floating mb-3">
-              <input type="number" class="form-control" id="new-item-quantity" name="new-item-quantity" required>
+              <input type="number" min="0" class="form-control" id="new-item-quantity" name="new-item-quantity" required>
               <label for="new-item-quantity">Quantidade</label>
             </div>
 
@@ -158,7 +158,7 @@
             </div>
 
             <div class="form-floating mb-3">
-              <input type="number" class="form-control" id="new-item-duration" name="new-item-duration" required>
+              <input type="number" min="0" class="form-control" id="new-item-duration" name="new-item-duration">
               <label for="new-item-duration">Duração em dias (após aberto)</label>
             </div>
           </div>
